--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -18,6 +18,7 @@
   <!-- include spec files here... -->
   <script src="spec/featureSpec.js"></script>
   <script src="spec/AirportSpec.js"></script>
+  <script src="spec/PlaneSpec.js"></script>
 
 </head>
 
