refactoring the tests

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,6 +12,7 @@
   <script src="lib/jasmine-3.5.0/boot.js"></script>
 
   <!-- include source files here... -->
+  <script src="src/idGenerator.js"></script>
   <script src="src/Airport.js"></script>
   <script src="src/Plane.js"></script>
 
